# customos

./: .gitignore  README.md  pyproject.toml
customization-system/: .gitignore  README.md  pyproject.toml
customization-system/customization_system/: cli.py  context.py  executor.py  llm.py  logging_setup.py  permissions.py  plan.py  plan_cache.py  vocabulary.py
customization-system/customization_system/executors/: dock_dim_unused.py  focus_pair_hotkey.py  notch_now_playing.py
customization-system/tests/: test_plan_cache.py
customos-core/: README.md  pyproject.toml
customos-core/customos_core/: __init__.py  identity.py  profile.py
customos-core/tests/: test_identity.py
docs/: README.md  architecture.md  interface.md
docs/decisions/: 0001-three-subsystem-split.md  0002-uv-workspace-layout.md  0003-traits-vs-state-separation.md  0004-behavioral-profile-typed-contract.md  0005-customization-system-architecture.md  0006-identifier-normalization-in-customos-core.md  0007-plan-caching.md  README.md
docs/research/: README.md
profile-extractor/: HANDOFF.md  README.md  config.toml  pyproject.toml  start.sh
profile-extractor/macprofile/: preflight.py  schema.py  settings.py
profile-extractor/macprofile/analyze/: cohabitation.py  communication.py  files.py  llm.py  pipeline.py  rhythms.py  sessions.py  workflows.py
profile-extractor/macprofile/app/: api.py  cli.py
profile-extractor/macprofile/extractors/: base.py  biome.py  browsers.py  calendar.py  knowledgec.py  mail.py  messages.py  notes.py  photos.py  reminders.py  sfl2.py  shell_history.py  spotlight.py
profile-extractor/macprofile/normalize/: device_scope.py  identity.py  load.py
profile-extractor/macprofile/profile/: build.py  render.py
profile-extractor/output/: analyses.json  hook_suggestions.json  profile.json  profile.md
