[project]
name = "customization-system"
version = "0.1.0"
description = "Runtime-overlay macOS customizations driven by the CustomOS behavioral profile (Layer 1)."
requires-python = ">=3.12"
dependencies = [
    "customos-core",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "anthropic>=0.39",
    "openai>=1.50",
    "pyobjc-core>=10.3",
    "pyobjc-framework-Cocoa>=10.3",
    "pyobjc-framework-Quartz>=10.3",
    "pyobjc-framework-ApplicationServices>=10.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
customization-system = "customization_system.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["customization_system"]

[tool.uv.sources]
customos-core = { workspace = true }
