[project]
name = "customos-core"
version = "0.1.0"
description = "Shared contracts (BehavioralProfile schema, identifier normalization) for CustomOS"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["customos_core"]
